--- a/TabController/sample/src/main/res/layout/fragment_tab.xml
+++ b/TabController/sample/src/main/res/layout/fragment_tab.xml
@@ -26,6 +26,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="@{tabNum}"
+            android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
