--- a/TabController/sample/src/main/res/layout/activity_fragment_tab_controller.xml
+++ b/TabController/sample/src/main/res/layout/activity_fragment_tab_controller.xml
@@ -17,7 +17,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.appolica.sample.TabControllerFragmentActivity">
+    tools:context="com.appolica.sample.activity.TabControllerFragmentActivity">
 
     <Button
         android:id="@+id/buttonTab1"
