--- a/TabController/sample/src/main/res/layout/activity_main.xml
+++ b/TabController/sample/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.appolica.sample.MainActivity">
+        tools:context="com.appolica.sample.activity.MainActivity">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerViewActivities"
