--- a/TabController/sample/src/main/res/layout/fragment_tab_view_pager.xml
+++ b/TabController/sample/src/main/res/layout/fragment_tab_view_pager.xml
@@ -15,9 +15,9 @@
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
             android:layout_marginTop="0dp"
-            app:tabTextColor="@android:color/white"
-            app:tabSelectedTextColor="@android:color/white"
-            app:tabBackground="@color/colorPrimary"
+            android:background="@color/colorTabLayout"
+            app:tabTextColor="@color/colorSecondaryText"
+            app:tabSelectedTextColor="@color/colorPrimaryText"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent">
