--- a/TabController/sample/src/main/res/values/colors.xml
+++ b/TabController/sample/src/main/res/values/colors.xml
@@ -2,5 +2,12 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimaryLight">#C5CAE9</color>
+    <color name="colorAccent">#00BCD4</color>
+    <color name="colorPrimaryText">#212121</color>
+    <color name="colorSecondaryText">#757575</color>
+    <color name="colorIcons">#FFFFFF</color>
+    <color name="colorDividers">#BDBDBD</color>
+    <color name="colorTabLayout">#f5f5f5</color>
+    <color name="colorTabIdle">#bdbdbd</color>
 </resources>
