Edit: extracted tab colors to colors.xml

--- a/TabController/sample/src/main/res/values/colors.xml
+++ b/TabController/sample/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="colorDividers">#BDBDBD</color>
     <color name="colorTabLayout">#f5f5f5</color>
     <color name="colorTabIdle">#bdbdbd</color>
+    <color name="colorTabStack">#1976d2</color>
+    <color name="colorTabPager">#3F51B5</color>
+    <color name="colorTabFlat">#1976d2</color>
 </resources>
