--- a/TabController/sample/src/main/res/layout/activity_main.xml
+++ b/TabController/sample/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         tools:context="com.appolica.sample.activity.MainActivity">
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewActivities"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
