--- a/TabController/sample/src/main/res/layout/fragment_stack_nested.xml
+++ b/TabController/sample/src/main/res/layout/fragment_stack_nested.xml
@@ -5,15 +5,13 @@
 
     <data>
 
-        <import type="java.lang.String"/>
-
         <variable
             name="text"
             type="String"/>
 
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -32,5 +30,5 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
